// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 Component should render correctly with default theme 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-family: "Simplon Norm Light","Lucida Sans","Lucida Sans Unicode","Lucida Grande",Arial,Helvetica,sans-serif;
  line-height: 1.4;
  box-sizing: border-box;
  white-space: normal;
  font-family: 'Core Light','Simplon Norm Regular','Lucida Sans','Lucida Sans Unicode', 'Lucida Grande',Arial,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.2;
  margin: 0;
  text-transform: uppercase;
  font-size: 1.3em;
}

@media (min-width:48em) {
  .c0 {
    font-size: 1.5em;
  }
}

@media (min-width:62em) {
  .c0 {
    font-size: 1.7em;
  }
}

@media (min-width:80em) {
  .c0 {
    font-size: 2em;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`H2 Component should render correctly with hkm theme 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-family: Helvetica,Arial,sans-serif;
  line-height: 1.4;
  box-sizing: border-box;
  white-space: normal;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 0;
  text-transform: none;
  font-size: 1.3em;
}

@media (min-width:48em) {
  .c0 {
    font-size: 1.5em;
  }
}

@media (min-width:62em) {
  .c0 {
    font-size: 1.65em;
  }
}

@media (min-width:80em) {
  .c0 {
    font-size: 2em;
  }
}

<div
  className="c0"
>
  Content
</div>
`;
